@@ -4,7 +4,7 @@ $EM_CONF[$_EXTKEY] = [
     'title' => 'Frontend TCE',
     'description' => 'It brings the deprecated TYPO3 4.x class tslib_feTCE and the processScript FEData setup with new features partly back into TYPO3 10 and later. This is needed by extensions based on the former TYPO3 FORM like tt_board and tt_guest. Only form MAIL and form wizards additionally require code provided by the extension compatibility6.',
     'category' => 'plugin',
-    'version' => '0.9.4',
+    'version' => '0.9.5',
     'state' => 'stable',
     'author' => 'Franz Holzinger',
     'author_email' => 'franz@ttproducts.de',
